# reveal

./: LICENSE  README.md  pyproject.toml  reveal.py
examples/: 2022-10-21_reveal_qc_website.py  2022-10-26_reveal_ks2.py  2022-10-26_reveal_reruns.py  2022-11-30_reveal_atlas.py  2022-11-30_reveal_benchmarks.py  2022-11-30_reveal_repro.py  2022-12-09_reveal_atlas.ipynb  2023-01-24_reveal_chronic_max.py  2023-02-02_reveal_critical_gaelle.py  2023-02-20_new_reveal_website.py  2023-02-28_reveal_presentation.py  2023-05-24_reveal_ks_rerun_chris.py  2023-06-07_reveal_residuals.py  2025-04-01_reveal_qc_poyo.py  2025-04-21_reveal_qc_EA.py  2025-07-17_ephys_atlas.py  getting_started.py  playbook.md
src/reveal/: api.py  plots.py  reveal.py
tests/: test_reveal.py
