[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reveal"
version = "0.0.1"
authors = [
  { name="Olivier Winter", email="owinter@internationalbrainlab.org" },
  { name="Chris Langfield", email="christopher.langfield@internationalbrainlab.org" }
]
description = "Tools to build reveal web-based presentations for scientific visualisations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/int-brain-lab/reveal"
"Bug Tracker" = "https://github.com/int-brain-lab/reveal/issues"